@startuml
skinparam classAttributeIconSize 0
hide empty methods

'========================
' Classes
'========================
class Bus {
  +name: str
  +nominal_kv: float
  +bus_index: int
  --
  {static} _bus_counter: int
}

class Transformer {
  +name: str
  +bus1_name: str
  +bus2_name: str
  +r: float
  +x: float
}

class TransmissionLine {
  +name: str
  +bus1_name: str
  +bus2_name: str
  +r: float
  +x: float
  +g: float
  +b: float
}

class Load {
  +name: str
  +bus1_name: str
  +mw: float
  +mvar: float
}

class Generator {
  +name: str
  +bus1_name: str
  +voltage_setpoint: float
  +mw_setpoint: float
}

'========================
' Relationships (logical connections)
'========================
Transformer "1" --> "1" Bus : bus1_name
Transformer "1" --> "1" Bus : bus2_name

TransmissionLine "1" --> "1" Bus : bus1_name
TransmissionLine "1" --> "1" Bus : bus2_name

Load "1" --> "1" Bus : bus1_name
Generator "1" --> "1" Bus : bus1_name

note right of Bus
  bus_index is assigned automatically
  using a class-level counter.
end note

@enduml